deploy/k8s/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labadia
  namespace: labadia
  labels:
    app: labadia
spec:
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: labadia
  template:
    metadata:
      labels:
        app: labadia
    spec:
      containers:
      - name: nextjs
        image: ghcr.io/nonzod/labadia:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "512Mi"
            cpu: "0.5"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: labadia-data
          mountPath: /app/data
      volumes:
      - name: labadia-data
        persistentVolumeClaim:
          claimName: labadia-data-pvc
