deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labadia-service
  namespace: labadia
spec:
  selector:
    app: labadia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
